# uiowa-aquatics-schedule

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: daily_run.yml
src/: google_calendar.py  scraper.py
