[project]
name = "uiowa-aquatics-schedule"
version = "0.1.0"
description = "Scraper for the UIOWA aquatics pool schedule."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "cloudscraper>=1.2.71",
    "google-api-python-client>=2.187.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.2.3",
    "python-dotenv>=1.2.1",
    "tabulate>=0.9.0",
]
